# pytest-asdf-plugin

./: .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/pytest_asdf_plugin/: plugin.py
tests/: test_plugin.py
tests/example/resources/schemas/: failing-1.0.0.yaml  foo-1.0.0.yaml  invalid-1.0.0.yaml  valid-1.0.0.yaml
tests/example/resources/schemas/nested/: bar-1.0.0.yaml
